...
    <string name="dialog_username">username</string>
    <string name="dialog_email">Email address:</string>
    <string name="dialog_close">Close</string>

    <!-- VirtualTourActivity stuff -->
    <string name="action_account">Account</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>

    <!-- Strings for User Profile UI -->
    <string name="uniAccountClaimer">  UNI account  </string>
    <string name="backButtonText"> BACK </string>
    <string name="editProfileButtonText"> Edit profile </string>
...
    <string name="cameraButtonText">Camera</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="createAccountPasswordFieldHint">Enter a password</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="backToLoginFromCreateButtonText">Back to login</string>
    <string name="createAccountEmailFieldHint">Enter an email</string>
    <string name="loginButtonText">Log In!</string>
    <string name="resetPasswordButtonText">Password Forgotten</string>
    <string name="createAccountFromLoginButtonText">Create account</string>
    <string name="resetConfirmationViewText">If this address is valid, you will receive a link to change your password</string>
    <string name="goToLoginFromResetButtonText">Log In Menu</string>
    <string name="loadingTextAdActivity">Loading…</string>
    <string name="editTitleAdCreation">Title</string>
...
    <string name="snackbarNoPhotos_AdCreation">Please add at least one image!</string>
    <string name="openAdCreationDescription_Scrolling">Open page for creating an ad</string>

    <!-- ScrollingActivity stuff -->
    <string name="searchDescription_Scrolling">Which city?</string>
    <string name="confirmCameraButtonText">Confirm</string>
    <string name="scrollingActivityAlertDialogMessage">Are you sure you want to log out ?</string>
    <string name="scrollingActivityAlertDialogPositiveButton">Yes</string>
    <string name="scrollingActivityAlertDialogNegativeButton">No</string>

    <!-- CameraActivity stuff -->
    <string name="canceledNoImage"> "Canceled: you did not upload any image " </string>
    <string name="leftButtonDescription_Panorama">Load previous image</string>

...
    <string name="notSetCallbackTextView">not set</string>
    <string name="permissionDefault">Permission</string>
    <string name="currentLocation">Current location :</string>
    <string name="locationUnknown">unknown</string>
    <string name="getLocationButton">Get location</string>
    <string name="locationDefault">0.0</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="userAds">Your Ads</string>

    <!-- FullScreenImageActivity stuff -->
    <string-array name="periodList">
        <item>Month</item>
        <item>Week</item>
...
